[gd_scene load_steps=16 format=2]

[ext_resource path="res://entities/assets/shadows/small_shadow.png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/bat.png" type="Texture" id=2]
[ext_resource path="res://area2ds/hurt_boxes/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://area2ds/detection/DetectionZone.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Animation",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.41769

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.28569
height = 4.25651

[sub_resource type="CircleShape2D" id=9]
radius = 49.7465

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "Animation"
frame = 1
playing = true
offset = Vector2( 0, -12 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8
show_hit_effect = true

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -14.311 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 5

[node name="DetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="DetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.235294 )
shape = SubResource( 9 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBox"]
[editable path="DetectionZone"]
